<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CodeDay KC Running App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_workout">Workout</string>
    <string name="minute_description">Minutes per mile</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="stop">Stop</string>
    <string name="info">Info</string>
    <string name="startWorkoutBtnTV">Start Running!</string>
    <string name="mpmValueTV">9:00</string>
    <string name="mpmLabel">Minutes Per Mile</string>
    <string name="mphTV">6.40</string>
    <string name="mphLabel">MPH</string>
    <string name="title_activity_splash">Splash</string>
    <string name="analyzeTV">Hold on a sec while we analyze your music...</string>
    <string name="splashWelcome">Loading your music...</string>
    <string name="analyzeWelcome">Hello</string>

   <string name="title_activity_analyze_music">AnalyzeMusic</string>
	<string name="spinner_feet">Feet</string>
	<string name="spinner_inches">Inches</string>
	
	<string-array name="feet_array">
	    <item>4</item>
	    <item>5</item>
	    <item>6</item>
	</string-array>
	
	<string-array name="inch_array">
	    <item>00</item>
	    <item>01</item>
	    <item>02</item>
	    <item>03</item>
	    <item>04</item>
	    <item>05</item>
	    <item>06</item>
	    <item>07</item>
	    <item>08</item>
	    <item>09</item>
	    <item>10</item>
	    <item>11</item>
	</string-array>

</resources>
