<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Workout" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:src="@drawable/pause" />

    <TextView
        android:id="@+id/mpmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mpmValueTV"
        android:layout_toLeftOf="@+id/mphLabel"
        android:text="@string/mpmLabel" />

    <TextView
        android:id="@+id/mpmValueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mphLabel"
        android:layout_below="@+id/seekBar1"
        android:layout_marginLeft="21dp"
        android:text="@string/mpmValueTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_below="@+id/mphLabel"
        android:contentDescription="Minute per Mile"
        android:indeterminate="false"
        android:max="15"
        android:progress="12" />

    <TextView
        android:id="@+id/_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="00:00"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="64px" />

    <TextView
        android:id="@+id/mphTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mpmLabel"
        android:layout_below="@+id/_time"
        android:layout_marginRight="18dp"
        android:layout_marginTop="26dp"
        android:text="@string/mphTV"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/mphLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mphTV"
        android:layout_centerHorizontal="true"
        android:text="@string/mphLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>